# demo-repo

./: CMakeLists.txt
config/: map_config.json
include/: base_types.h  utils.h
include/json/: action_build_bot.h  action_explode_request.h  action_mine_request.h  action_move_request.h  action_scan_request.h  action_transfer_request.h  bot_update.h  error.h  job_status.h  job_update.h  land_update.h  map_config.h  position.h  resource_config.h
src/: client_main.cc
